--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>724</width>
-    <height>351</height>
+    <height>239</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>724</width>
+    <height>239</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>724</width>
+    <height>239</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -17,8 +29,8 @@
    <widget class="QPushButton" name="btn_convert">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>200</y>
+      <x>20</x>
+      <y>160</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -30,8 +42,8 @@
    <widget class="QRadioButton" name="rbtn_none">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>50</y>
+      <x>10</x>
+      <y>30</y>
       <width>82</width>
       <height>17</height>
      </rect>
@@ -46,8 +58,8 @@
    <widget class="QRadioButton" name="rbtn_semicol">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>70</y>
+      <x>10</x>
+      <y>50</y>
       <width>82</width>
       <height>17</height>
      </rect>
@@ -59,8 +71,8 @@
    <widget class="QRadioButton" name="rbtn_sinf">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>90</y>
+      <x>10</x>
+      <y>70</y>
       <width>82</width>
       <height>17</height>
      </rect>
@@ -72,8 +84,8 @@
    <widget class="QLabel" name="lbl_sep_head">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>30</y>
+      <x>10</x>
+      <y>10</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -85,8 +97,8 @@
    <widget class="QPushButton" name="btn_selectfile">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>140</y>
+      <x>20</x>
+      <y>120</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -98,37 +110,30 @@
    <widget class="QLabel" name="lbl_file_out">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>140</y>
+      <x>130</x>
+      <y>120</y>
       <width>551</width>
       <height>16</height>
      </rect>
     </property>
-    <property name="text">
-     <string>file</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_status_out">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>240</y>
-      <width>151</width>
-      <height>16</height>
-     </rect>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
     </property>
     <property name="text">
-     <string>status</string>
+     <string>input file</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_file_output">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>200</y>
+      <x>130</x>
+      <y>160</y>
       <width>551</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
     </property>
     <property name="text">
      <string>output file</string>
@@ -137,11 +142,14 @@
    <widget class="QLabel" name="lbl_file_head">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>110</y>
+      <x>130</x>
+      <y>90</y>
       <width>551</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
     </property>
     <property name="text">
      <string>Acceped file types: .bmp, .png, .jpg</string>
